--- a/public/sass/base.scss
+++ b/public/sass/base.scss
@@ -21,6 +21,8 @@
 @import 'collection/contact';
 @import 'collection/custom';
 @import 'collection/responsive';
+@import 'collection/sidebar';
+
 
 
 
