--- a/public/sass/collection/_variables.scss
+++ b/public/sass/collection/_variables.scss
@@ -3,10 +3,14 @@
 // $primary-color:orange;
 // $bg-primary:orange;
 // $text-primary:orange;
-$bg-color:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-$primary-color:#3531ff;
-$bg-primary:#3531ff;
-$text-primary:#3531ff;
+// $bg-color:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+$bg-color:#fff;
+// $primary-color:#3531ff;
+// $bg-primary:#3531ff;
+// $text-primary:#3531ff;
+$primary-color:#be56b6;
+$bg-primary:#be56b6;
+$text-primary:#be56b6;
 $blur:2rem;
 $rounded-box:20px;
 $transition:0.3s;
