--- a/public/sass/collection/_contact.scss
+++ b/public/sass/collection/_contact.scss
@@ -4,8 +4,15 @@
 }
 
 .contact-section{
+    position:relative;
+    margin:-1rem;
 
-    margin:5rem 0;
+    .container{
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform:translate(-50%,-50%);
+    }
 
     .contact-container{
        
@@ -14,7 +21,7 @@
     .form-control{
         border-radius: 2rem;
         background:transparent;
-        border: 3px solid #fff;
+        border: 3px solid $primary-color;
     }
 
     .form-control:focus {
@@ -26,6 +33,12 @@
     padding:1.5rem;
     width:70%;
     margin:0 auto;
+    border-radius: 15px;
+    box-shadow: 0px 7px 20px -5px;
+    // -webkit-box-shadow: 0px 0px 9px 3px rgba(231,231,231,1);
+    // -moz-box-shadow: 0px 0px 9px 3px rgba(231,231,231,1);
+    // box-shadow: 0px 0px 9px 3px rgba(231,231,231,1);
+    background: #fff;
 
     .get-in-touch-wrapper{
         display:flex;
@@ -35,11 +48,14 @@
 
         .get-in-touch{
             // padding: 0 9rem;
-            color:#fff;
+            color:#000;
 
             .socmed-icon{
                 width: 39px;
                 border-radius: 7px;
+                background: $primary-color;
+                border:2px solid $primary-color;
+
             }
     
             .socials{
@@ -61,6 +77,11 @@
                         align-items: flex-start;
                         margin-right: 1rem;
                         margin-bottom:1rem;
+                        
+                    }
+
+                    i{
+                        color:$primary-color;
                     }
                 }
             } 
@@ -74,22 +95,40 @@
    
 }
 
+.clipped-bg{
+    clip-path: polygon(0 0%, 0% 100%, 133% 100%);
+    background: $bg-primary;
+    height:600px;
+
+}
+
 .btn-Submit{
-    background: #fff;
+    background: $bg-primary;
     width: 100%;
     border-radius: 2rem;
-    color: #cecee3;
+    color: #fff;
     font-weight: bold;
     text-transform: uppercase;
-    border:2px solid #fff;
+    border:2px solid $primary-color;
+    transition:background $transition ease-in-out;
 
     &:hover {
-        background:transparent;
-        transition: $transition !important;
-        color:#fff;
+        background:#fff;
+        // transition: $transition !important;
+        color:$primary-color;
     }
 }
 
+
+@media(max-width:992px){
+    .purple-block{
+        background: #be56b6;
+        width: 100%;
+        height: 78px;
+        position: absolute;
+        bottom: -72px;
+    }
+}
 
 @media(max-width:768px){
     .contact-wrapper{
@@ -103,7 +142,11 @@
 
 @media(max-width:420px){
     .get-in-touch-wrapper{
-        height:300px !important;
+        height:200px !important;
+    }
+
+    .contact-section{
+        margin:5rem 0 4rem !important;
     }
 }
 
