--- a/public/sass/collection/_main.scss
+++ b/public/sass/collection/_main.scss
@@ -23,15 +23,22 @@ main{
     width: 100%;
     // background: linear-gradient(to right top ,#65dfc9 , #6cdbeb);
     background: $bg-color;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    padding:3rem;
+    // display:flex;
+    // align-items: center;
+    // justify-content: center;
+    // padding:3rem;
     position:relative;
+
+    // .container{
+    //     @media(max-width:992px){
+    //         padding: 0;
+    //     }
+    // }
 
         @media(max-width:992px){
             min-height: 100vh;
             padding: 0rem;
+            padding-bottom: 0.5rem;
         }
 
         // @media(max-width:420px){
@@ -48,6 +55,7 @@ main{
 // }
 
 .glass{
+    margin-top:5rem;
     position:relative;
     background:#fff;
     min-height: 110vh;
@@ -57,7 +65,7 @@ main{
         rgba(255,255,255,0.7),
         rgba(255,255,255,0.3)
         );
-        border-radius:2rem;
+        // border-radius:2rem;
     z-index: 3;
     backdrop-filter:blur(2rem);
     overflow:hidden;
@@ -80,6 +88,7 @@ main{
         position: absolute;
         border-radius: 50%;
         z-index: 2;
+        // display:none;
 }
 
 .circle2{
@@ -128,7 +137,7 @@ main{
         padding: 2rem;
     }
 
-    @media(max-width: 992){
+    @media(max-width: 992px){
         padding: 1rem;
     }
 }
