--- a/public/sass/collection/_projects.scss
+++ b/public/sass/collection/_projects.scss
@@ -1,5 +1,16 @@
 .project{
-    padding:10rem 0 4rem;
+    padding:4rem 0;
+
+    // .project-inner{
+    //     @media(max-width: 992px){
+    //         margin: 0 -20px;
+    //     }
+    // }
+    .container{
+        @media(max-width: 992px){
+           padding:0;
+        }
+    }
     // background: #f7f7f7;
 
     #project-filter{
@@ -9,10 +20,21 @@
         text-align: center;
         border-radius: 50px;
         padding: 2px 15px;
+        position:relative;
+
+        .filter-underline{
+            position: absolute;
+            width: 50px;
+            height: 3px;
+            bottom: 6px;
+            border-radius: 20px;
+            transition: $transition;
+            background: $primary-color;
+        }
 
 
         :hover{
-            color:#fff !important;
+            color:$primary-color !important;
 
         }
 
@@ -26,15 +48,33 @@
    
 
     .projects{
+        min-height: 300px;
         overflow: hidden;
         transition: 1s;
         display:flex;
-	    flex-wrap:wrap;
-
+        flex-wrap:wrap;
+        // box-shadow: 1px 4px 17px -4px;
+        // border-radius: $rounded-box;
         .project-item{
+            
+
+            .project-inner{
+                width: 100%;
+                height: 100%;
+                border-radius: 15px;
+                // box-shadow: 0px 0px 9px 3px rgb(231 231 231);
+                -webkit-box-shadow: 0px 0px 9px 3px rgba(231,231,231,1);
+                -moz-box-shadow: 0px 0px 9px 3px rgba(231,231,231,1);
+                box-shadow: 0px 0px 9px 3px rgba(231,231,231,1);
+            }
+
             min-height: 270px;
             max-height: 270px;
-            transition:0.5s;
+            // transition:0.5s;
+            transform:scale(0);
+            position: absolute;
+            animation-delay: 2s;
+           
         }
         
         .project-img{
@@ -45,9 +85,11 @@
         .project-info{
             opacity: 0;
             position: absolute;
-            left: 30px;
+            width:80%;
+            left: 50%;
             right: 30px;
             bottom: 0;
+            transform:translateX(-50%);
             z-index: 3;
             transition: all ease-in-out $transition;
             background: rgba(255, 255, 255, 0.9);
@@ -56,7 +98,7 @@
             border-radius: $rounded-box;
 
             .desc-wrapper{
-                max-width: 215px;
+                max-width: 200px;
 
                 p{
                     overflow: hidden;
@@ -104,6 +146,10 @@
             border-radius: $rounded-box;
             background: #ffff;
 
+            @media(max-width: 992px){
+                right: 1rem;
+            }
+
                 &:hover{
                     background:  darken(white, 5%);
                     transition: $transition;
@@ -115,6 +161,10 @@
             max-height: 500px;
             margin:auto;
 
+            @media(max-width:992px){
+                width:100%;
+            }
+
             .VueCarousel-wrapper{
                 border-radius: $rounded-box;
 
@@ -123,6 +173,10 @@
                     cursor:grab;
                     height: 100%;
                     max-height: 500px;
+                }
+
+                @media(max-width:992px){
+                    border-radius: 0;
                 }
             }
         }
@@ -145,7 +199,7 @@
             text-transform: uppercase;
             letter-spacing: 0.1em;
             line-height: 1.2;
-            color: #fff;
+            color: #000;
             margin-top: 20px;
             letter-spacing: 0;
         }
@@ -169,7 +223,7 @@
 
 .project-item:hover .project-info{
         opacity: 1 !important;
-        bottom: 30px;
+        bottom: 40px;
 }
  
 
