--- a/public/sass/collection/_skills.scss
+++ b/public/sass/collection/_skills.scss
@@ -1,9 +1,9 @@
 .skills-section{
     // padding:10rem 0 4rem;
-    padding-top:2rem;
+    // padding-top:2rem;
 
     li{
-        display: list-item;
+        display: list-item !important;
     }
     
         .content-wrapper{
@@ -51,7 +51,10 @@
                     rgba(255,255,255,0.2)
                     );
                  backdrop-filter:blur(2rem);
-                 box-shadow: 0px 7px 20px -5px;
+                //  box-shadow: 0px 7px 20px -5px;
+                -webkit-box-shadow: 0px 0px 9px 3px rgba(231,231,231,1);
+                -moz-box-shadow: 0px 0px 9px 3px rgba(231,231,231,1);
+                box-shadow: 0px 0px 9px 3px rgba(231,231,231,1);
 
                 
 
